# video-cuts

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cpu-backup  README.md  docker-compose.gpu.yml  docker-compose.yml  download.py  migrate_db.py  prompt.md  pyproject.toml  requirements.txt  verify_modularization.py  video_highlight.py
epics/: epic2.md  epic3.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.css  App.jsx  ProjectDetails.jsx  config.js  index.css
src/videocuts/: cli.py  config.py  main.py
src/videocuts/api/: app.py  database.py  download.py  models.py  routes.py  schemas.py  settings.py
src/videocuts/audio/: analysis.py  diarization.py  transcription.py
src/videocuts/candidates/: __init__.py  features.py  generator.py  llm_reranker.py  models.py  refinement.py  scorer.py  selection.py  timeline.py
src/videocuts/caption/: generators.py  hook.py
src/videocuts/highlights/: selector.py
src/videocuts/llm/: selector.py
src/videocuts/models/: transcript.py
src/videocuts/models/yolov8m-face_openvino_model/: metadata.yaml  yolov8m-face.xml
src/videocuts/models/yolov8n-face_openvino_model/: metadata.yaml  yolov8n-face.xml
src/videocuts/utils/: device.py  download_models.py  export_openvino.py  font.py  system.py
src/videocuts/video/: detection.py  frames.py  models.py  processor.py  tracking.py
tests/: test_utils.py
tests/unit/: test_profanity.py
