[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "videocuts"
version = "0.1.0"
description = "A modular video highlight generator using AI"
dependencies = [
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "transformers",
    "numpy",
    "opencv-python",
    "mediapipe",
    "pillow",
    "openai",
    "requests",
    # Web API
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "yt-dlp",
    "python-dotenv",
    "pydantic-settings",
    "faster-whisper",
    "pyannote-audio",
]

[project.scripts]
videocuts = "videocuts.cli:main"
